# Vulkan-RubiksCube

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.h.in
Vk_RubiksCube/: CMakeLists.txt  Config.h  Vk_RubiksCube.cpp  Vk_RubiksCube.h
Vk_RubiksCube/core/: DrawableEntity.cpp  DrawableEntity.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h  TransformManager.cpp  TransformManager.h
Vk_RubiksCube/enums/: MouseDirection.h
Vk_RubiksCube/game_entities/: CubiesEntity.cpp  CubiesEntity.h  DynamicRootEntity.cpp  DynamicRootEntity.h  GameManager.cpp  GameManager.h  PointerEntity.cpp  PointerEntity.h  RootEntity.cpp  RootEntity.h
Vk_RubiksCube/materials/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  ShaderObject.cpp  ShaderObject.h
Vk_RubiksCube/platform/: WindowManager.cpp  WindowManager.h
Vk_RubiksCube/rendering/: Renderer.cpp  Renderer.h  Vk_DynamicRendering.cpp  Vk_DynamicRendering.h
Vk_RubiksCube/rendering/camera/: Camera.cpp  Camera.h
Vk_RubiksCube/rendering/picking/: ObjectPicking.cpp  ObjectPicking.h
Vk_RubiksCube/rendering/picking/compute/: HitDetect.cpp  HitDetect.h
Vk_RubiksCube/resources/models/mouse_pointer/: mouse_pointer.mtl
Vk_RubiksCube/resources/models/root/: root.mtl
Vk_RubiksCube/resources/models/rubiks_cube/: rubiks_cube.mtl
Vk_RubiksCube/resources/models/rubiks_cube_newpivots/: rubiks_cube_new_pivot.mtl
Vk_RubiksCube/resources/models/rubiks_cube_texture/: RubiksCubeTexture.mtl
Vk_RubiksCube/shaders/: compile_shaders.bat  mesh_shader.frag.glsl  mesh_shader.frag.spv  mesh_shader.vert.glsl  mesh_shader.vert.spv  object_picker.comp.glsl  object_picking_shader.frag.glsl  object_picking_shader.frag.spv  object_picking_shader.vert.glsl  object_picking_shader.vert.spv  shader.frag  shader.vert
Vk_RubiksCube/shaders/include/: hit_detection_common.glsl  mesh_shader_common.glsl  object_picking_shader_common.glsl
Vk_RubiksCube/structs/: Buffer.h  BufferInfo.h  Compute.h  DescriptorInfo.h  DrawBatch.h  DrawItem.h  EngineContext.h  GPUMaterialData.h  GPU_Buffer.h  Image.h  LoadedImageData.h  LoadedObject.h  MaterialParams.h  MaterialValues.h  PushConstantBlock.h  Ray.h  SceneData.h  TextureInfo.h  TriangleInfo.h  Vertex.h  Vertex_ObjectPicking.h  Vk_Buffer.h  Vk_DepthStencilImage.h  Vk_DepthStencil_Image.h  Vk_Image.h  Vk_Init.h  Vk_Material.h  Vk_MaterialData.h  Vk_RenderData.h  Vk_SceneData.h  Vk_ShaderInfo.h
Vk_RubiksCube/utils/: DescriptorUtils.cpp  DescriptorUtils.h  FileUtils.cpp  FileUtils.h  GameUtils.cpp  GameUtils.h  ImageUtils.cpp  ImageUtils.h  Initializers.cpp  Initializers.h  MemoryUtils.cpp  MemoryUtils.h  ModelLoaderUtils.cpp  ModelLoaderUtils.h  ModelUtils.cpp  ModelUtils.h  RenderUtils.cpp  RenderUtils.h  VMA_ImageUtils.cpp  VMA_ImageUtils.h  VMA_MemoryUtils.cpp  VMA_MemoryUtils.h  Vk_Descriptors.cpp  Vk_Descriptors.h  Vk_Utils.cpp  Vk_Utils.h
Vk_RubiksCube/utils/mouse_utils/: MouseTracker.cpp  MouseTracker.h  ProjectionUtils.cpp  ProjectionUtils.h
Vk_RubiksCube/vulkan/: DeviceManager.cpp  DeviceManager.h  SwapchainManager.cpp  SwapchainManager.h
Vk_RubiksCube/vulkan/Features/: VulkanFeatureActivator.h
Vk_RubiksCube/vulkan/features/: VulkanFeatureActivator.cpp
cmake/: Dependencies.cmake  toolchain-clang-cl.cmake  toolchain-msvc.cmake
